--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "eslint:recommended",
+    "extends": "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
@@ -11,6 +11,11 @@
         "sourceType": "module"
     },
     "rules": {
-      "no-unused-vars": "warn"
+      "max-len": "off",
+      "no-unused-vars": "warn",
+      "no-alert": "off",
+      "arrow-parens": "warn",
+      "class-methods-use-this": "warn",
+      "no-restricted-syntax": "warn"
     }
 }
