click cell listeners activated (but need debug of double-clicking)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
         "error",
         "LabeledStatement",
         "WithStatement"
-      ]
+      ],
+      "prefer-destructuring": ["error", {
+        "object": true,
+        "array": false
+      }]
     }
 }
